Set GOAMD64 explicitly to v1
This is already the default, but it seems like a good idea to be explicit about it.

--- a/1.18/alpine3.14/Dockerfile
+++ b/1.18/alpine3.14/Dockerfile
@@ -23,7 +23,7 @@ RUN set -eux; \
 	url=; \
 	case "$arch" in \
 		'x86_64') \
-			export GOARCH='amd64' GOOS='linux'; \
+			export GOAMD64='v1' GOARCH='amd64' GOOS='linux'; \
 			;; \
 		'armhf') \
 			export GOARCH='arm' GOARM='6' GOOS='linux'; \
