--- a/1.19-rc/bullseye/Dockerfile
+++ b/1.19-rc/bullseye/Dockerfile
@@ -1,21 +1,10 @@
-{{
-	def is_alpine:
-		env.variant | startswith("alpine")
-	;
-	def alpine_version:
-		env.variant | ltrimstr("alpine")
--}}
-{{ if is_alpine then ( -}}
-FROM alpine:{{ alpine_version }}
+#
+# NOTE: THIS DOCKERFILE IS GENERATED VIA "apply-templates.sh"
+#
+# PLEASE DO NOT EDIT IT DIRECTLY.
+#
 
-RUN apk add --no-cache ca-certificates
-
-# set up nsswitch.conf for Go's "netgo" implementation
-# - https://github.com/golang/go/blob/go1.9.1/src/net/conf.go#L194-L275
-# - docker run --rm debian:stretch grep '^hosts:' /etc/nsswitch.conf
-RUN [ ! -e /etc/nsswitch.conf ] && echo 'hosts: files dns' > /etc/nsswitch.conf
-{{ ) else ( -}}
-FROM buildpack-deps:{{ env.variant }}-scm
+FROM buildpack-deps:bullseye-scm
 
 # install cgo-related dependencies
 RUN set -eux; \
@@ -28,89 +17,60 @@ RUN set -eux; \
 		pkg-config \
 	; \
 	rm -rf /var/lib/apt/lists/*
-{{ ) end -}}
 
 ENV PATH /usr/local/go/bin:$PATH
 
-ENV GOLANG_VERSION {{ .version }}
+ENV GOLANG_VERSION 1.19beta1
 
-{{
-	def os_arches:
-		if is_alpine then
-			{
-				amd64: "x86_64",
-				arm32v6: "armhf",
-				arm32v7: "armv7",
-				arm64v8: "aarch64",
-				i386: "x86",
-				ppc64le: "ppc64le",
-				s390x: "s390x",
-			}
-		else
-			{
-				amd64: "amd64",
-				arm32v5: "armel",
-				arm32v7: "armhf",
-				arm64v8: "arm64",
-				i386: "i386",
-				mips64le: "mips64el",
-				ppc64le: "ppc64el",
-				s390x: "s390x",
-			}
-		end
--}}
 RUN set -eux; \
-{{ if is_alpine then ( -}}
-	apk add --no-cache --virtual .fetch-deps gnupg; \
-	arch="$(apk --print-arch)"; \
-{{ ) else ( -}}
 	arch="$(dpkg --print-architecture)"; arch="${arch##*-}"; \
-{{ ) end -}}
 	url=; \
 	case "$arch" in \
-{{
-	[
-		.arches | to_entries[]
-		| select(.value.supported)
-		| .key as $bashbrewArch
-		| (
-			os_arches
-			| .[$bashbrewArch] // empty
-		) as $osArch
-		| .value
-		| (
--}}
-		{{ $osArch | @sh }}) \
-{{ if .url and (is_alpine | not) then ( -}}
-			url={{ .url | @sh }}; \
-			sha256={{ .sha256 | @sh }}; \
-{{ ) else ( -}}
-			export {{ .env | to_entries | map(.key + "=" + (.value | @sh)) | join(" ") }}; \
-{{ ) end -}}
+		'amd64') \
+			url='https://dl.google.com/go/go1.19beta1.linux-amd64.tar.gz'; \
+			sha256='7d4df5bb5f94acf23edeb5a87f962696e6c6a2ea0b58280433deea79f9a231d3'; \
 			;; \
-{{
-		)
-	] | add
--}}
+		'armel') \
+			export GOARCH='arm' GOARM='5' GOOS='linux'; \
+			;; \
+		'armhf') \
+			url='https://dl.google.com/go/go1.19beta1.linux-armv6l.tar.gz'; \
+			sha256='2406789dbcf6933a0e22e842aff1d05224ca4f9aba9be7190d55213428e5456f'; \
+			;; \
+		'arm64') \
+			url='https://dl.google.com/go/go1.19beta1.linux-arm64.tar.gz'; \
+			sha256='b4dc2ddcc6e93488a8d23e155ba2a7501e754f5991289ecba33b3c5a52946bea'; \
+			;; \
+		'i386') \
+			url='https://dl.google.com/go/go1.19beta1.linux-386.tar.gz'; \
+			sha256='554ec1024cf8b04b2f744ce7864787de3736995d71b8f181cf811f7af263b24e'; \
+			;; \
+		'mips64el') \
+			export GOARCH='mips64le' GOOS='linux'; \
+			;; \
+		'ppc64el') \
+			url='https://dl.google.com/go/go1.19beta1.linux-ppc64le.tar.gz'; \
+			sha256='3111fc6ff05dbca7a3b993a155b5ae007f12a5345fce831c695236931ad2b773'; \
+			;; \
+		's390x') \
+			url='https://dl.google.com/go/go1.19beta1.linux-s390x.tar.gz'; \
+			sha256='576720c8c0118b47ba4aa4cb4c8773c1148f69c6ae0334618f8fd8ace15e5b6e'; \
+			;; \
 		*) echo >&2 "error: unsupported architecture '$arch' (likely packaging update needed)"; exit 1 ;; \
 	esac; \
 	build=; \
 	if [ -z "$url" ]; then \
 # https://github.com/golang/go/issues/38536#issuecomment-616897960
 		build=1; \
-		url={{ .arches.src.url | @sh }}; \
-		sha256={{ .arches.src.sha256 | @sh }}; \
-{{ if is_alpine then ( -}}
-# the precompiled binaries published by Go upstream are not compatible with Alpine, so we always build from source here 😅
-{{ ) else ( -}}
+		url='https://dl.google.com/go/go1.19beta1.src.tar.gz'; \
+		sha256='f463e5a5c25eebdea06d7ae3890c91de2f3795304e9fa350505804d826ec2683'; \
 		echo >&2; \
 		echo >&2 "warning: current architecture ($arch) does not have a compatible Go binary release; will be building from source"; \
 		echo >&2; \
-{{ ) end -}}
 	fi; \
 	\
 	wget -O go.tgz.asc "$url.asc"; \
-	wget -O go.tgz "$url"{{ if is_alpine then "" else " --progress=dot:giga" end }}; \
+	wget -O go.tgz "$url" --progress=dot:giga; \
 	echo "$sha256 *go.tgz" | sha256sum -c -; \
 	\
 # https://github.com/golang/go/issues/14739#issuecomment-324767697
@@ -127,18 +87,9 @@ RUN set -eux; \
 	rm go.tgz; \
 	\
 	if [ -n "$build" ]; then \
-{{ if is_alpine then ( -}}
-		apk add --no-cache --virtual .build-deps \
-			bash \
-			gcc \
-			go \
-			musl-dev \
-		; \
-{{ ) else ( -}}
 		savedAptMark="$(apt-mark showmanual)"; \
 		apt-get update; \
 		apt-get install -y --no-install-recommends golang-go; \
-{{ ) end -}}
 		\
 		export GOCACHE='/tmp/gocache'; \
 		\
@@ -146,23 +97,13 @@ RUN set -eux; \
 			cd /usr/local/go/src; \
 # set GOROOT_BOOTSTRAP + GOHOST* such that we can build Go successfully
 			export GOROOT_BOOTSTRAP="$(go env GOROOT)" GOHOSTOS="$GOOS" GOHOSTARCH="$GOARCH"; \
-{{ if is_alpine and ([ "1.17", "1.18" ] | index(env.version) | not) then ( -}}
-			if [ "${GOARCH:-}" = '386' ]; then \
-# https://github.com/golang/go/issues/52919; https://github.com/docker-library/golang/pull/426#issuecomment-1152623837
-				export CGO_CFLAGS='-fno-stack-protector'; \
-			fi; \
-{{ ) else "" end -}}
 			./make.bash; \
 		); \
 		\
-{{ if is_alpine then ( -}}
-		apk del --no-network .build-deps; \
-{{ ) else ( -}}
 		apt-mark auto '.*' > /dev/null; \
 		apt-mark manual $savedAptMark > /dev/null; \
 		apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; \
 		rm -rf /var/lib/apt/lists/*; \
-{{ ) end -}}
 		\
 # remove a few intermediate / bootstrapping files the official binary release tarballs do not contain
 		rm -rf \
@@ -176,10 +117,6 @@ RUN set -eux; \
 		; \
 	fi; \
 	\
-{{ if is_alpine then ( -}}
-	apk del --no-network .fetch-deps; \
-	\
-{{ ) else "" end -}}
 	go version
 
 ENV GOPATH /go
