--- a/1.19/alpine3.15/Dockerfile
+++ b/1.19/alpine3.15/Dockerfile
@@ -8,10 +8,16 @@ FROM alpine:3.15
 
 RUN apk add --no-cache ca-certificates
 
-# set up nsswitch.conf for Go's "netgo" implementation
-# - https://github.com/golang/go/blob/go1.9.1/src/net/conf.go#L194-L275
+# ensure that nsswitch.conf is set up for Go's "netgo" implementation
+# - https://github.com/golang/go/blob/go1.19.3/src/net/conf.go#L227-L303
 # - docker run --rm debian grep '^hosts:' /etc/nsswitch.conf
-RUN [ ! -e /etc/nsswitch.conf ] && echo 'hosts: files dns' > /etc/nsswitch.conf
+# Alpine 3.16 includes nsswitch.conf
+RUN set -eux; \
+	if [ -e /etc/nsswitch.conf ]; then \
+		grep '^hosts: files dns' /etc/nsswitch.conf; \
+	else \
+		echo 'hosts: files dns' > /etc/nsswitch.conf; \
+	fi
 
 ENV PATH /usr/local/go/bin:$PATH
 
