Fix 1.20 builds on mips and arm32v5
> packages main (build.go) and building_Go_requires_Go_1_17_13_or_later (notgo117.go)

Also, update GitHub Actions to test force building on Debian so we can avoid this problem in the future.

Co-authored-by: Tianon Gravi <admwiggin@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
         name: Generate Jobs
         run: |
           strategy="$("$BASHBREW_SCRIPTS/github-actions/generate.sh")"
+          strategy="$(.github/workflows/munge.sh -c <<<"$strategy")"
           strategy="$("$BASHBREW_SCRIPTS/github-actions/munge-i386.sh" -c <<<"$strategy")"
           echo "strategy=$strategy" >> "$GITHUB_OUTPUT"
           jq . <<<"$strategy" # sanity check / debugging aid
